--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,5 @@
 
 
-.App {
-  text-align: center;
-  font-weight: bold;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -40,7 +24,11 @@
   }
 }
 
-body {
+body, h1, h2, h3, h4, h5, h6, .card-title, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'PT Sans', sans-serif;
   font-weight: bold;
+}
+
+.main-content {
+  margin-top: 50px; /* puts under header */
 }
